Fix problem with appearing phone number on media width about 400px, prepare cart to display amount of items in basket like in task number 9, make phone icon smaller.

--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -32,9 +32,6 @@ header {
 
       i {
         margin-left: 5px;
-        // @include media-breakpoint-down(sm) {
-        //   margin-left: 0;
-        // }
       }
     }
 
@@ -46,9 +43,6 @@ header {
       }
       i {
         margin-right: 5px;
-        // @include media-breakpoint-down(sm) {
-        //   margin-right: 0;
-        // }
       }
     }
   }
@@ -58,6 +52,9 @@ header {
 
     .container > .row {
       height: 145px;
+      @include media-breakpoint-down(sm) {
+        height: 125px;
+      }
     }
 
     .container {
@@ -85,8 +82,12 @@ header {
       @include media-breakpoint-down(sm) {
         order: 2;
         p {
+          min-width: 290px;
           text-align: center;
           font-size: 14px;
+        }
+        i {
+          font-size: 28px;
         }
       }
     }
@@ -97,6 +98,7 @@ header {
         align-self: flex-start;
         margin-top: 8px;
         min-width: 160px;
+        padding-right: 40px;
       }
       .cart-box {
         display: inline-block;
@@ -142,13 +144,13 @@ header {
       }
     }
     .logo {
-      @include media-breakpoint-down(sm) {
-        align-self: flex-start;
-        margin-top: 8px;
-        min-width: 160px;
-        img {
-          height: 50px;
-        }
+      padding-left: 40px;
+      align-self: flex-start;
+      justify-content: flex-start;
+      margin-top: 8px;
+      min-width: 160px;
+      img {
+        height: 50px;
       }
     }
   }
